# rust_graph_template

./: Cargo.toml
migrations/2023-03-31-164417_create_schemas/: down.sql  up.sql
src/: main.rs  schema.rs
src/api/: mod.rs
src/model/: mod.rs  user_schema.rs
src/test/: graphql.http
src/util/: types.rs
src/util/postgres/: mod.rs
