[package]
name = "rust_graph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
actix-web-lab = "0.19.1"
diesel = { version = "2.0.3", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
futures = "0.3.28"
juniper = "0.15.11"
r2d2 = "0.8.10"
serde = "1.0.159"
serde_derive = "1.0.159"
serde_json = "1.0.95"
